--- a/machining_feature_localizer/.env
+++ b/machining_feature_localizer/.env
@@ -1,5 +1,5 @@
-# DATA_FOLDER_EXTERNAL=D:\Promotion\Repos\CoCADAi_framework\data
-DATA_FOLDER_EXTERNAL=C:\Users\SelfAdmin\Desktop\Applications\CoCadAi_framework\data
+DATA_FOLDER_EXTERNAL=D:\Promotion\Repos\CLT_Analyzer\data
+# DATA_FOLDER_EXTERNAL=C:\Users\SelfAdmin\Desktop\Applications\CoCadAi_framework\data
 DATA_FOLDER=/data
 
 WEIGHTS=/data/weights
