--- a/machining_time_estimator/docker-compose.yml
+++ b/machining_time_estimator/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.7'
 
 services:
-  machining_time_estimator:
-    container_name: machining_time_estimator
+  clt_time_estimator:
+    container_name: clt_time_estimator
     build: .
     ports:
       - "5003:5003"
