--- a/machining_time_estimator/.env
+++ b/machining_time_estimator/.env
@@ -1,9 +1,9 @@
-DATA_FOLDER_EXTERNAL=D:\Promotion\Repos\CoCADAi_framework\data
+DATA_FOLDER_EXTERNAL=D:\Promotion\Repos\CLT_Analyzer\data
 # DATA_FOLDER_EXTERNAL=C:\Users\SelfAdmin\Desktop\Applications\CoCadAi_framework\data
 DATA_FOLDER=/data
 
 WEIGHTS=/data/weights
-TRAINING_DATASET_SOURCE=/data/cad2
+TRAINING_DATASET_SOURCE=/data/cad
 TRAINING_DATASET_DESTINATION=/data/graph
 TEST_DATA=/data/test
 
