--- a/user_interface/docker-compose.yml
+++ b/user_interface/docker-compose.yml
@@ -1,10 +1,11 @@
 version: '3.8'
 
 services:
-  nextjs:
+  clt_interface:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: clt_interface
     ports:
       - "5000:5000"
     environment:
