Complete testet new framework
The code is complely tested and works, but it should still be cleaned

--- a/data_generator/.env
+++ b/data_generator/.env
@@ -1,4 +1,3 @@
-#DATA_FOLDER_EXTERNAL=C:\Users\SelfAdmin\Desktop\Applications\CoCadAi_framework\data
-DATA_FOLDER_EXTERNAL=D:\Promotion\Repos\CLT_Analyzer\data
+DATA_FOLDER_EXTERNAL=C:\Users\Boehm\Desktop\Repos\CLT_Analyzer\data
 DATA_FOLDER=/data
 TRAINING_DATASET_SOURCE=/data/cad
