--- a/machining_feature_recognizer/.env
+++ b/machining_feature_recognizer/.env
@@ -1,5 +1,4 @@
-DATA_FOLDER_EXTERNAL=D:\Promotion\Repos\CLT_Analyzer\data
-# DATA_FOLDER_EXTERNAL=C:\Users\SelfAdmin\Desktop\Applications\CoCadAi_framework\data
+DATA_FOLDER_EXTERNAL=C:\Users\Boehm\Desktop\data
 DATA_FOLDER=/data
 
 WEIGHTS=/data/weights
