--- a/machining_time_estimator/Dockerfile
+++ b/machining_time_estimator/Dockerfile
@@ -1,20 +1,43 @@
-FROM pytorch/pytorch:2.0.0-cuda11.7-cudnn8-runtime
+FROM nvidia/cuda:12.8.0-runtime-ubuntu22.04
 
+ENV DEBIAN_FRONTEND=noninteractive
+
+# System dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    cmake \
+    libglib2.0-0 \
+    libgl1-mesa-glx \
+    python3 \
+    python3-pip \
+    python3-dev \
+    git \
+    curl \
+    ca-certificates \
+    && ln -s /usr/bin/python3 /usr/bin/python \
+    && rm -rf /var/lib/apt/lists/*
+
+# Upgrade pip
+RUN pip3 install --upgrade pip setuptools wheel
+
+# Install build tools for Python extensions
+RUN pip install cython pybind11
+
+# Set working directory
 WORKDIR /app
 
-COPY requirements.txt /app/requirements.txt
+# Copy requirements
+COPY requirements.txt .
 
-RUN pip3 install --no-cache-dir --upgrade pip setuptools && \
-    apt-get update && \
-    apt-get install -y build-essential cmake libglib2.0-0 libgl1-mesa-glx && \
-    ln -s /usr/include/locale.h /usr/include/xlocale.h && \
-    pip3 install --no-cache-dir -r requirements.txt && \
-    pip install torch==2.0.0 && \
+# Install Python packages and nightly PyTorch with CUDA 12.8
+RUN pip install --no-cache-dir -r requirements.txt && \
+    pip install torch==2.7.0+cu128 --index-url https://download.pytorch.org/whl/cu128 && \
     pip install torch_geometric && \
-    pip install torch_scatter torch_sparse torch_cluster torch_spline_conv -f https://data.pyg.org/whl/torch-2.0.0+cu117.html && \
-    rm /usr/include/xlocale.h
+    pip install pyg_lib torch_scatter torch_sparse torch_cluster torch_spline_conv -f https://data.pyg.org/whl/torch-2.7.0+cu128.html
 
+# Copy your application code
 COPY scripts/ /app/scripts/
 ENV PYTHONPATH=/app/scripts
 
+# Run main script
 CMD ["python", "scripts/__main__.py"]
