--- a/machining_time_estimator/requirements.txt
+++ b/machining_time_estimator/requirements.txt
@@ -1,8 +1,8 @@
-wandb==0.15.12
-optuna==3.4.0
-numpy-stl==3.0.1
+wandb==0.19.11
+optuna==4.3.0
+numpy-stl==3.2.0
 scikit-learn==1.6.1
-thop==0.1.1.post2209072238
-Flask==3.1.0
-flask-cors==5.0.0
-pymadcad==0.16.0
+Flask==3.1.1
+flask-cors==6.0.0
+pymadcad==0.18.1
+pandas==2.2.3
